--- a/app/views/welcome/chohaeng.erb
+++ b/app/views/welcome/chohaeng.erb
@@ -1,1 +1,56 @@
-<h1>초행 공사중입니다.</h1>
+<div class="container-fluid" style="background-color:rgb(255,218,9);">
+    <div class="col-12">
+        <img src="/assets/chohaeng_main_yellow.jpeg" style="width:100%">
+        <br>&nbsp;
+        <div class="row" style="padding-right:10px; padding-left:10px">
+            <span style="color:black; text-shadow: 1px 1px rgba(255, 255, 255, .50);">
+                <br>그대의 첫 걸음을 축하드립니다.
+                <br>'팀 초행'은 누구에게나 힘들고 서툰 처음을 만난, 혹은 만나게 될 사람들에게 위로와 응원을 보냅니다. 
+            </span> 
+        </div>
+        <br>&nbsp;
+        <div class="row" style="padding-right:10px; padding-left:10px">
+            <h5 style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50);">팀 초행</h5>
+            <span style="color:black; text-shadow: 1px 1px rgba(255, 255, 255, .50);">
+                <br> 저희는 사람들의 연대를 통해 서로가 서로에게 힘이 되는 사회가 되기를 희망합니다.<br>
+                <br> 인생에서 마주치는 '처음'이 어려운 이유는 자신이 그것을 해내지 못할지도 모른다는 두려움 때문입니다. 누군가의 '보통'의 일은 각자 자신의 인생에서는 '커다란 산'인 경우가 분명 있습니다. 저희는 지금 당신이 겪는 과정이 얼마나 힘든 것인지 이해합니다. 당신의 '어려운 처음'에 조금이나마 도움이 될 수 있는 것들로 위로의 메시지와 응원의 메세지를 담았습니다.<br>
+                <br> 단순한 선물이 아닌 '누군가만을 생각한 마음'을 선물받을 수 있게 해주고 싶습니다. 힘들지 않은 세상을 만들 수는 없지만, 힘들어도 힘이 되는 사람이 곁에 있는 사회를 만들고 싶습니다. 
+            </span> 
+        </div>
+        <br>&nbsp;
+        <div class="row" style="padding-right:10px; padding-left:10px">
+            <h5 style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50);">새꽃상자</h5>
+            <span style="color:black; text-shadow: 1px 1px rgba(255, 255, 255, .50);">
+                <br> 삶에서 처음 마주하는 일을 겪을때면, 위로나 응원이 필요할 때가 있습니다. 초행팀의 첫번째 시리즈인 '새꽃상자'는 처음 엄마가 된 누군가에게 보내는 선물 상자입니다. <br>
+                <br> 모두의 축복 속에 아이를 출산하고 나면, 모두의 관심은 온통 새로운 생명에 집중됩니다. 그 과정 속에서 함께 축복받아 마땅한 산모분들은 소외감을 느끼거나 우울증의 위험에 처하게 됩니다. 
+                <br> '초행'은 오로지 산모를 위한 선물 상자를 기획하여 산모들을 위로하고 응원합니다. 10개월동안 돌보지 못한 본인의 건강을 위한 상품들과 응원의 메세지가 담긴 카드를 담아, 오롯이 처음 엄마의 길에 들어선 이들을 위한 박스를 구성했습니다. <br>
+                <br> 박스 구성품은 이제 엄마가 된 내 자식같은 사람들을 위해 생산자분들께서 소중하게 가꾸고 관리해 온 지역 특산물입니다. 새꽃상자를 통해 자연스럽게 지역 경제 활성화에도 기여할 수 있습니다.
+            </span> 
+        </div>
+        <div class="row" style="padding-right:10px; padding-left:10px">
+        <br>
+            <div class="align-left-aos" data-aos="zoom-out-right" data-aos-duration="1000" style="text-align:left">
+                <span style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50); font-size:5vw">"아기엄마라는 호칭의 무게감에 제 삶, </span>
+            </div>
+            <div class="align-right-aos" data-aos="zoom-out-right" data-aos-duration="1000" style="text-align:right">
+                <span style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50); font-size:5vw;">제 자신이 사라진 것 같은 기분이에요."</span>
+            </div>
+        </div>
+
+        <div class="row" data-aos="zoom-out-right" data-aos-duration="1000" style="padding-right:10px; padding-left:10px">
+            <span style="color:black; text-shadow: 1px 1px rgba(255, 255, 255, .50);">
+               출산 후 10명 중 9명에 달하는 산모들이 우울감을 호소하곤 합니다. 그럼에도 불구하고 출산 후에는 관심의 대상이 온통 아기만을 향하게 되죠. 왜 산모만을 위한 위로는 없는 걸까? 우리는 이러한 의문에서 출발해 ‘새꽃상자’를 만들게 되었습니다.
+            </span> 
+        </div>
+        
+        <br><br><br><br><br><br>
+    </div>
+</div>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    $(document).ready(function(){
+        $("body").css("background-color", "rgb(255,218,9)")
+        AOS.init();
+    });
+</script>
