--- a/app/views/welcome/chohaeng.erb
+++ b/app/views/welcome/chohaeng.erb
@@ -2,10 +2,11 @@
     <div class="col-12">
         <img src="/assets/chohaeng_main_yellow.jpeg" style="width:100%">
         <br>&nbsp;
-        <div class="row" style="padding-right:10px; padding-left:10px">
+        <div class="row" style="padding-right:10px; padding-left:10px; text-align:center; height:10vh">
             <span style="color:black; text-shadow: 1px 1px rgba(255, 255, 255, .50);">
-                <br>그대의 첫 걸음을 축하드립니다.
-                <br>'팀 초행'은 누구에게나 힘들고 서툰 처음을 만난, 혹은 만나게 될 사람들에게 위로와 응원을 보냅니다. 
+                <br>그대의 첫 걸음에 축하를 보냅니다.<br>
+                <br>'팀 초행'은 누구에게나 힘들고 서툰 처음을 만난, 
+                <br>혹은 만나게 될 사람들에게 위로와 응원을 보냅니다. 
             </span> 
         </div>
         <br>&nbsp;
@@ -46,8 +47,7 @@
         <br><br><br><br><br><br>
     </div>
 </div>
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 <script>
     $(document).ready(function(){
         $("body").css("background-color", "rgb(255,218,9)")
