background-color hotfix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
 
-  <body style="font-family: 'Nanum Barun Gothic'; height:100vh; background-color:#cffded;">
+  <body style="font-family: 'Nanum Barun Gothic'; height:100vh; background-color:rgb(196,255,238);">
     <nav>
       <div class="nav-wrapper" style="background-color:white;">
         <a href="/welcome/home" class="brand-logo">
