meins update, main page img ready

--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -1,8 +1,8 @@
-<div class="container-fluid" style="background-color:rgb(196,255,238); height:92.5vh"> <!-- 배경 생 sRGB-->
-    <div class="col-12 header">
+<div class="container-fluid" style="background-color:rgb(196,255,238);"> <!-- 배경 색 sRGB-->
+    <div class="col s12 header">
         <img src="/assets/header.png" style="display:block; width:100%;">
     </div>
-    <div class="wrap" style="">
+    <div class="wrap">
         <br>
         <br>
         <br>
@@ -18,7 +18,7 @@
             </div>
             <br>
             <div class="align-left-aos" data-aos="zoom-out-right" data-aos-duration="1000" style="text-align:left">
-                혁신은 무언가를 한번에 바꾸어 버리는 것 처럼 보이지만, 실제 혁신은 서로 다른 의견들이 충돌하고 모이며 이루어집니다. <br>
+                혁신은 무언가를 한번에 바꾸어 버리는 것처럼 보이지만, 실제 혁신은 서로 다른 의견들이 충돌하고 모이며 이루어집니다. <br>
             </div>
             <div class="align-left-aos" data-aos="zoom-out-right" data-aos-duration="1000" style="text-align:left">
                 물이 끓을 때에는 100℃ 에서 끓겠지만, 그 이전의 과정이 없었다면 결코 100℃ 까지 온도가 올라갈 수 없었을 것입니다.<br>
@@ -28,13 +28,25 @@
              </div>
         </div>
         <br>
-        <div class="button_wrap" style="text-align:center; height:20vh">
+        <div class="button_wrap" style="text-align:center;">
             경희대학교 루키의 프로젝트<br><br>
             <a href="/welcome/chohaeng" class="waves-effect waves-light btn-small" style="background-color:black">초행</a>
             <a href="/welcome/meinz" class="waves-effect waves-light btn-small" style="background-color:black">마인즈</a>
         </div>
+
+        <div class="row">
+            <div class="col s4">
+                <img src="" class="circle responsive-img">
+            </div>
+            <div class="col s4">
+                <img src="" class="circle responsive-img">
+            </div>
+            <div class="col s4">
+                <img src="" class="circle responsive-img">
+            </div>
+        </div>
     </div>
-    <div class="col-12 footer">
+    <div class="col s12 footer">
         <img src="/assets/footer.png" style="display:block; width:100%;">
     </div>
 </div>
