--- a/app/views/welcome/meinz.erb
+++ b/app/views/welcome/meinz.erb
@@ -1,1 +1,29 @@
-<h1>마인즈 공사중입니다.</h1>
+<div class="container-fluid" style="background-color:black;">
+    <img src="/assets/meins_main.jpg" style="width:100%">
+    <br>&nbsp;
+    <div class="row" style="padding-right:10px; padding-left:10px">
+        <h5 style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50);">팀 마인즈</h5>
+        <span style="color: white;">
+            <br> memory in space의 줄임말인 meins(마인즈)는 공간에 기억을 남기고 또 기록하기 위한 서비스를 만들어가는 팀입니다.<br>
+            <br> 'AR을 통해 가상의 세계에서 낙서를 하면 재미있겠다.'는 생각에서 출발한 마인즈의 프로젝트는 낙서로 인한 문화재 훼손 문제이라는 사회적 문제를 해결함과 동시에 문화재에서 즐길 수 있는 재미있는 컨텐츠를 제공하고자 합니다.
+        </span> 
+    </div>
+    <br>
+    <div class="row" style="padding-right:10px; padding-left:10px">
+        <h5 style="color:white; text-shadow: 1px 1px rgba(0, 0, 0, .50);">메모리얼</h5>
+        <span style="color: white;">
+            <br> 17년도에 일본 국보인 도다이지 신사에 한글로 적힌 낙서가 발견되어 국제적으로 규탄을 받는 일이 있었습니다.<br>
+            <br> 저희는 '가상공간에 낙서'한다는 아이디어와 문화재 훼손 문제를 연결하게 되었습니다. 이를 통해 문화재를 파괴하는 행위였던 낙서를 사람들로 하여금 문화재에 관심을 가지게 하며 더 나아가 문화재를 시민의 손으로 지킬 수 있는 행위로 만들고자 하였습니다.<br>
+            <br> 이를 통해 마인즈팀은 각 문화재에서 AR을 통해 ‘낙서’를 하는 사용자 수를 카운팅하여 광고를 게재하는 방식으로 수익금을 창출하며, 수익금으로 해당 문화재의 발전에 기여하는 서비스인 메모리얼을 기획하게 되었습니다.
+        </span> 
+    </div>
+
+ 
+ 
+</div>
+ <script>
+    $(document).ready(function(){
+        $("body").css("background-color", "black")
+        AOS.init();
+    });
+</script>
